Fix scratch draggable not being visible

--- a/css/app.css
+++ b/css/app.css
@@ -133,6 +133,11 @@
     border-width: 0;
 }
 
+.ui-draggable-dragging {
+    width: 120px;
+    height: 40px;
+}
+
 #trash-box {
     position: absolute;
     bottom: 24px;
